--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # === Core server ===
 flask==3.0.2
+gunicorn==22.0.0  # For production server deployment
 
 # === Data ===
 pandas==2.3.1
@@ -10,6 +11,7 @@ tqdm==4.67.1
 # === Document parsing ===
 python-docx==1.1.0
 pdfplumber==0.11.0
+pdfminer.six==20231228  # pdfplumber dependency, ensures compatibility
 
 # === NLP / Embedding ===
 sentence-transformers==2.7.0
@@ -30,6 +32,10 @@ cachetools==5.3.3
 # === Config / Utils ===
 python-dotenv==1.0.1
 regex==2024.5.15
+requests==2.32.3  # For PDF download and API calls
+
+# === LLM Clients ===
+google-generativeai==0.4.1  # Gemini API client
 
 # === Dev/Test ===
 black==24.4.2
