--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ requests==2.32.3  # For PDF download and API calls
 
 # === LLM Clients ===
 google-generativeai==0.4.1  # Gemini API client
+cohere==5.5.8  # Cohere API client (fallback for Gemini)
 
 # === Dev/Test ===
 black==24.4.2
