--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ DEBUG=True
 SECRET_KEY=changeme
 
 # === Database (PostgreSQL) ===
-POSTGRES_URI=postgresql://user:pass@localhost:5432/policy_llm
-DB_NAME=policy_llm
+POSTGRES_URI=POSTGRES_URI=postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}
+DB_NAME=railway
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
+DB_PASSWORD=zUCCqLepmlTwrQhxDwpwWnAUvHqbWgkt
+DB_HOST=postgres.railway.internal
 DB_PORT=5432
 
 # === Embedding Model ===
