--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ python-docx==1.1.0
 pdfplumber==0.11.0
 pdfminer.six==20231228
 
-sentence-transformers==2.7.0
+torch==2.2.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 transformers==4.43.1
-torch==2.2.2
+sentence-transformers==2.7.0
 accelerate==0.30.1
 
 faiss-cpu==1.8.0
