--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ pdfminer.six==20231228
 # === NLP / Embedding ===
 sentence-transformers==2.7.0
 transformers==4.43.1
+
+# Force precompiled torch CPU wheels
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2
 accelerate==0.30.1
 
@@ -36,3 +39,4 @@ requests==2.32.3
 # === LLM Clients ===
 google-generativeai==0.4.1
 cohere==5.5.8
+
