--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ DEBUG=True
 SECRET_KEY=changeme
 
 # === Database (PostgreSQL) ===
-POSTGRES_URI=POSTGRES_URI=postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}
 DB_NAME=railway
 DB_USER=postgres
 DB_PASSWORD=zUCCqLepmlTwrQhxDwpwWnAUvHqbWgkt
 DB_HOST=postgres.railway.internal
 DB_PORT=5432
+POSTGRES_URI=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # === Embedding Model ===
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
