--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # === Core server ===
-flask==3.0.2
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
 gunicorn==22.0.0
 
 # === Data ===
@@ -16,14 +17,14 @@ pdfminer.six==20231228
 # === NLP / Embedding ===
 sentence-transformers==2.7.0
 transformers==4.43.1
-pinecone-client
+pinecone-client==3.2.2
 
 # Force precompiled torch CPU wheels
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2
 accelerate==0.30.1
 
-# === Vector Search ===
+# === Vector Search (local fallback) ===
 faiss-cpu==1.8.0
 
 # === Database ===
@@ -40,4 +41,3 @@ requests==2.32.3
 # === LLM Clients ===
 google-generativeai==0.4.1
 cohere==5.5.8
-
