--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,14 @@ tqdm==4.67.1
 python-docx==1.1.0
 pdfplumber==0.11.0
 pdfminer.six==20231228
+pypdf==4.2.0
 
 # === NLP / Embedding ===
 sentence-transformers==2.7.0
 transformers==4.43.1
 pinecone-client==3.2.2
 
-# Force precompiled torch CPU wheels
+# === Torch CPU ===
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2
 accelerate==0.30.1
@@ -41,3 +42,4 @@ requests==2.32.3
 # === LLM Clients ===
 google-generativeai==0.4.1
 cohere==5.5.8
+
