--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ GEMINI_API_KEY=AIzaSyB5tSjidvsJdNW1kRfAaw5pXoSiKe-iubY
 GEMINI_MODEL=gemini-1.5-flash
 
 # === Cohere API ===
-COHERE_API_KEY=your_cohere_api_key_here
+COHERE_API_KEY=geWEzq1Ih0nz01ktYs6Mh0onOFGDUPw6vpru3Gbp
 COHERE_MODEL=command-xlarge-nightly
 
 # === FAISS Indexing & Chunking ===
@@ -44,7 +44,7 @@ ENABLE_LOGGING=True
 LOG_LEVEL=INFO
 
 # === Webhook ===
-WEBHOOK_URL=https://web-production-a1d36.up.railway.app/hackrx/run
+WEBHOOK_URL=https://web-production-e8de0.up.railway.app/
 
 
 # === HackRx Authentication ===
