--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ SECRET_KEY=changeme
 # === Database (PostgreSQL) ===
 DB_NAME=railway
 DB_USER=postgres
-DB_PASSWORD=zUCCqLepmlTwrQhxDwpwWnAUvHqbWgkt
+DB_PASSWORD=SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm
 DB_HOST=postgres.railway.internal
 DB_PORT=5432
-POSTGRES_URI=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+POSTGRES_URI=postgresql://postgres:SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm@postgres.railway.internal:5432/railway
 
 # === Embedding Model ===
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
