--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ SECRET_KEY=changeme
 DB_NAME=railway
 DB_USER=postgres
 DB_PASSWORD=SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm
-DB_HOST=postgres.railway.internal
-DB_PORT=5432
-POSTGRES_URI=postgresql://postgres:SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm@postgres.railway.internal:5432/railway
+DB_HOST=mainline.proxy.rlwy.net
+DB_PORT=25990
+POSTGRES_URI=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # === Embedding Model ===
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
