--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ DB_USER=postgres
 DB_PASSWORD=SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm
 DB_HOST=mainline.proxy.rlwy.net
 DB_PORT=25990
-POSTGRES_URI=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+DATABASE_URL=postgresql://postgres:SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm@mainline.proxy.rlwy.net:25990/railway
+POSTGRES_URI=postgresql://postgres:SqncDHYuOBHQKPTeTDYxiYobUHVuSuHm@mainline.proxy.rlwy.net:25990/railway
 
 # === Embedding Model ===
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
